[package]
name = "pword"
version = "0.1.2"
authors = ["drbh <david.richard.holtz@gmail.com>"]
edition = "2018"
description = "pword is a secure password generator that lets you create unique passwords for websites based on an easy to remember master phrase."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT/Apache-2.0"
keywords = ["cryptography", "password", "generator", "deterministic", "offline"]
homepage = "https://github.com/drbh/pword"
repository = "https://github.com/drbh/pword.git"
readme = "README.md"

[dependencies]
chbs = "0.0.9"
rust-argon2 = "0.6.1"
clap = "2.33.0"
rpassword = "0.0.4"